--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "shpora",
+  "homepage": "https://GuzeevZhenya.github.io/Shpora",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,6 +10,8 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^6.3.0",
+    "json-server": "^0.17.0",
     "loader": "^2.1.1",
     "modul": "^0.0.1",
     "react": "^19.0.0",
@@ -17,14 +20,15 @@
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^15.6.1",
-    "web-vitals": "^2.1.4",
-    "json-server": "^0.17.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
